src/main/java/com/example/demo/error/exceptions/ProductExist.java
package com.example.demo.error.exceptions;

public class ProductExist extends RuntimeException {
    public ProductExist (){
        super("This product already exist");
    }
}
